--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -1,10 +1,3 @@
-%-------------------------
-% Resume in Latex
-% Author : Sourabh Bajaj
-% Website: https://github.com/sb2nov/resume
-% License : MIT
-%------------------------
-
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -55,7 +48,7 @@
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-5pt}
+    \end{tabular*}\vspace{-9pt}
 }
 
 \newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-6pt}}
@@ -65,7 +58,7 @@
 \newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
 \newcommand{\resumeItemListStart}{\begin{itemize}}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-12pt}}
 
 %-------------------------------------------
 %%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -75,10 +68,10 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://sourabhbajaj.com/}{\Large Ronak Sakhuja}} & Email : \href{mailto:ronaksakhuja@gmail.com}{ronaksakhuja@gmail.com}\\
+  \textbf{\href{http://ronaksakhuja.github.io/}{\Large Ronak Sakhuja}} & Email : \href{mailto:ronaksakhuja@gmail.com}{ronaksakhuja@gmail.com}\\
   \ & Mobile : +91-7838822862 \\
 \end{tabular*}
-{I believe to solve all problems through code, and I that's what I do.}
+{I love solving everyday problems with code.}
 
 
 %-----------EDUCATION-----------------
@@ -87,6 +80,9 @@
     \resumeSubheading
       {Delhi Technological University}{Delhi, India}
       {Bachelor of Technology in Computer Science; (8.71/10.0)}{Aug. 2016 -- June. 2020}
+    \resumeSubheading
+      {Sachdeva Public School}{Delhi, India}
+      {Class 12th AISSCE; 97\% }{March. 2015 - May 2016}
   \resumeSubHeadingListEnd
 
 
