--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -1,3 +1,10 @@
+%-------------------------
+% Resume in Latex
+% Author : Sourabh Bajaj
+% Website: https://github.com/sb2nov/resume
+% License : MIT
+%------------------------
+
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -148,17 +155,17 @@
   \resumeSubHeadingListStart
     \resumeSubItem{GeekAssistant (Deprecated)}
       {Developed a chrome plugin and a web portal to track their progress on geeksforgeeks.org,leetcode,codechef and codeforces with a 1000+ user base.}
-      \\[0.5em]\textbullet
+      \\[0.8em]\textbullet
       {It provides a common portal to track your progress on different coding websites. Users have option to mark bookmark a question, set a difficulty and write notes.}
     \resumeSubItem{DTU Farewell}
       {We were the 1st batch of the pandemic, and needed an online farewell.}
-      \\[0.5em]\textbullet
+      \\[0.8em]\textbullet
       { Created a portal for 3000 students of our batch to login and post scribbles on each other's profiles, give them a title, like posts, post a photo on a photowall.}
       \\[0em]\textbullet
       { Userbase : 2000+, Techstack : PHP(codeigniter),js,bootstrap}
     \resumeSubItem{Sarcar}
       {Android Application for Smart Vehicles, Intuited a way for vehicles to interact with each other by the concept of cognitive radio.Predictions of next location was made using LSTM to predict accidents.}
-      \\[0.5em]
+      \\[0.8em]
       \textbullet{ Tech Stack : Android(Java, XML) and Firebase for backend, Python for Machine Learning.}
 %     \resumeSubItem{Mac Setup}
 %       {Book that gives step by step instructions on setting up developer environment on Mac OS.}
