--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -183,7 +183,7 @@
     {2nd Prize, Microsoft MSHack}
     { Made a realtime bidding system for advertisements based on Azure Cognitive Services.}
     \resumeSubItem
-    {Microsoft API Prize at Hack The North}
+    {Microsoft Prize at Hack The North, University of Waterloo}
     {Won XBOX One S and Prioritised entry to Imagine Cup}
     \resumeSubItem
     {1st Prize at Clash Hacks}
