--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -184,7 +184,7 @@
     { Made a realtime bidding system for advertisements based on Azure Cognitive Services.}
     \resumeSubItem
     {Microsoft Prize at Hack The North, University of Waterloo}
-    {Won XBOX One S and Prioritised entry to Imagine Cup}
+    {Won priortized entry to Imagine Cup}
     \resumeSubItem
     {1st Prize at Clash Hacks}
     {Android Application for a teacher to analyse classroom in realtime using Azure cognitive API}
