--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -78,8 +78,6 @@
   \textbf{\href{http://ronaksakhuja.github.io/}{\Large Ronak Sakhuja}} & Email : \href{mailto:ronaksakhuja@gmail.com}{ronaksakhuja@gmail.com}\\
   \ & Mobile : +91-7838822862 \\
 \end{tabular*}
-{I love solving everyday problems with code.}
-
 
 %-----------EDUCATION-----------------
 \section{Education}
@@ -101,23 +99,22 @@
       {Microsoft}{Hyderabad, India}
       {Software Engineer}{June 2020 - Present}
       \resumeItemListStart
-        \resumeItem{OSDU}
-          {The OSDU is an industry forum that enables the Energy industry to collaborate on the development of transformational technology to support the world’s changing and evolving Energy needs.}
+        \resumeItem{Open Energy Platform}
+          {The OEP-OSDU is an industry forum that enables the Energy industry to collaborate on the development of transformational technology to support the world’s changing and evolving Energy needs.}
           \\\textbullet
           { Working as backend developer to enable Oil and Gas companies to use OSDU with Microsoft Azure as cloud provider. Tech Stack : Sprint Boot, kubernetes and docker}
+          \\\textbullet
+          {Key responsibilities include: Making micro-services resilient to handle failures across other services and infrastructure resources by using circuitbreakers, retries and timeouts effectively.}
+
         \resumeItem{Dynamics 365}
         {Microsoft Dynamics 365 is a cloud-based business applications platform that combines components of CRM and ERP with AI capabilities.}
           \newline
           \textbullet
-          { Primarily responsible for stabilising Service Level Agreements feature, owned bug fixes for Migration of SLA from legacy to Unified Interface.}
+          { Primarily responsible for stabilising Service Level Agreements feature, fixed 93\% of customer issues by detecting and fixing them before shipping.}
           \newline
           \textbullet
-          { Created Unit test mechanism for SLA Migration and integrated it with build pipeline.}
-          \newline
-          \textbullet
-          { Worked on supportable for Unified Service Desk and Service Level Agreements}
+          { Created testing mechanism for SLA Migration and integrated it with build pipeline.}
       \resumeItemListEnd
-
     \resumeSubheading
       {Microsoft}{Bangalore, India}
       {Software Engineering Intern}{May 2019 - July 2019}
