--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -93,11 +93,11 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Article.com}{Vancouver, Canada}
-      {Software Engineer Part-Time}{Jan 2021 - Present}
+      {Meta}{Toronto, Canada}
+      {Software Engineer}{May 2021 - Present}
       \resumeItemListStart
-        \resumeItem{Fulfilment Logic}
-          {Optimizing ETA logic in Java Spring Boot for fulfilling orders of article.com faster to customers.}
+        \resumeItem{TODO}
+          {TODO.}
       \resumeItemListEnd
     \resumeSubheading
       {Microsoft IDC}{Hyderabad, India}
@@ -106,7 +106,7 @@
         \resumeItem{Open Energy Platform}
           {The OEP-OSDU is an industry forum that enables the Energy industry to collaborate on the development of transformational technology to support the world’s changing and evolving Energy needs.}
           \\\textbullet
-          { Building Azure OEP PaaS to enable Oil and Gas companies to use OSDU on Azure. Tech Stack : Sprint Boot, kubernetes and docker}
+          { Building Azure OEP PaaS to enable Oil and Gas companies to use OSDU on Azure. Tech Stack : Spring Boot, kubernetes and docker}
           \\\textbullet
           {Improved resiliency of microservices to handle failures across other services and infrastructure resources by using circuitbreakers, retries, timeouts and identifying and mitigating single points of failures.}
           \\\textbullet
