--- a/ronak_sakhuja_resume.tex
+++ b/ronak_sakhuja_resume.tex
@@ -46,7 +46,7 @@
 % Custom commands
 \newcommand{\resumeItem}[2]{
   \item\small{
-    \textbf{#1}{: #2 \vspace{-2pt}}
+    \textbf{#1}{: #2 \vspace{2pt}}
   }
 }
 
@@ -76,7 +76,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ronaksakhuja.github.io/}{\Large Ronak Sakhuja}} & Email : \href{mailto:ronaksakhuja@gmail.com}{ronaksakhuja@gmail.com}\\
-  \ & Mobile : +1-(236) 994-7453 \\
+  \ & Mobile : +1-(613) 617-9121 \\
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -94,26 +94,31 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Meta}{Toronto, Canada}
-      {Software Engineer}{May 2021 - Present}
+      {Software Engineer}{May 2022 - Present}
       \resumeItemListStart
-        \resumeItem{TODO}
-          {TODO.}
+        \resumeItem{Whatsapp Business Experience}
+                { Team responsible for Business Experience using Whatsapp Business API. Our goal is to increase active businesses using Whatsapp API for communication & marketing.}
+          \\\textbullet
+          { Building new features for improving developer experience on Whatsapp Manager.}
+                    \\\textbullet
+          { Fullstack : React/Hack(PHP).}
+
       \resumeItemListEnd
     \resumeSubheading
-      {Microsoft IDC}{Hyderabad, India}
+      {Microsoft}{Hyderabad, India}
       {Software Engineer}{June 2020 - December 2021}
       \resumeItemListStart
         \resumeItem{Open Energy Platform}
           {The OEP-OSDU is an industry forum that enables the Energy industry to collaborate on the development of transformational technology to support the world’s changing and evolving Energy needs.}
-          \\\textbullet
+            \\\textbullet
           { Building Azure OEP PaaS to enable Oil and Gas companies to use OSDU on Azure. Tech Stack : Spring Boot, kubernetes and docker}
           \\\textbullet
-          {Improved resiliency of microservices to handle failures across other services and infrastructure resources by using circuitbreakers, retries, timeouts and identifying and mitigating single points of failures.}
+          { Improved resiliency of microservices to handle failures across other services and infrastructure resources by using circuitbreakers, retries, timeouts and identifying and mitigating single points of failures.}
           \\\textbullet
-          {Designed,built and integrated CI/CD pipelines for build test and release of nightly builds to dev test and prod environments.}
+          { Designed,built and integrated CI/CD pipelines for build test and release of nightly builds to dev test and prod environments.}
 
         \resumeItem{Dynamics 365}
-        {Microsoft Dynamics 365 is a cloud-based business applications platform that combines components of CRM and ERP with AI capabilities.}
+        { Microsoft Dynamics 365 is a cloud-based business applications platform that combines components of CRM and ERP with AI capabilities.}
           \newline
           \textbullet
           { Analysed,  identified and fixed issues with SLA Migration feature for 94\% customers before launch through proactive monitoring of logs.}
@@ -121,16 +126,6 @@
           \textbullet
           { Built integrated test mechanism for SLA Migration and automated it with build pipeline.}
       \resumeItemListEnd
-    \resumeSubheading
-      {Microsoft}{Bangalore, India}
-      {Software Engineering Intern}{May 2019 - July 2019}
-      \resumeItemListStart
-        \resumeItem{Omnichannel Migration Framework}
-          {Developed a framework used by PMs, to setup their Omnichannel configurations automatically, copying data,users and configurations from one CRM instance to another.}
-          \newline
-          {This automation reduced a PM's work from 10 hours to 10 minutes to setup an environment.}
-      \resumeItemListEnd
-
 %     \resumeSubheading
 %       {Le Jensoft}{India}
 %       {Summer Intern}{May 2018 - July 2018}
@@ -158,11 +153,11 @@
   \resumeSubHeadingListStart
     \resumeSubItem{GeekAssistant (Deprecated)}
       {Developed a chrome plugin and a web portal to track their progress on geeksforgeeks.org,leetcode,codechef and codeforces with a 1000+ user base.}
-      \\[0.8em]\textbullet
-      {It provides a common portal to track your progress on different coding websites. Users have option to mark bookmark a question, set a difficulty and write notes.}
+      \\[0.5em]\textbullet
+      { It provides a common portal to track your progress on different coding websites. Users have option to mark bookmark a question, set a difficulty and write notes.}
     \resumeSubItem{DTU Farewell}
       {We were the 1st batch of the pandemic, and needed an online farewell.}
-      \\[0.8em]\textbullet
+      \\[0.5em]\textbullet
       { Created a portal for 3000 students of our batch to login and post scribbles on each other's profiles, give them a title, like posts, post a photo on a photowall.}
       \\[0em]\textbullet
       { Userbase : 2000+, Techstack : PHP(codeigniter),js,bootstrap}
